--- a/font-end/src/components/header/style.scss
+++ b/font-end/src/components/header/style.scss
@@ -1,6 +1,8 @@
 header{
     padding-top: 1rem ;
     padding-bottom: .5rem;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 3px 5px;
+
     div{
       
         .danhmuc{
