front-end,back-end: realtime for comment

--- a/front-end/src/components/chuyen-xe/style.scss
+++ b/front-end/src/components/chuyen-xe/style.scss
@@ -23,6 +23,9 @@
     }
     .content-center{
         margin-left: 1rem;
+        .duration{
+            color: #9a958d;
+        }
         p{
             .content-center-daily{
                 font-weight: bold;
