--- a/front-end/src/components/ghe/style.scss
+++ b/front-end/src/components/ghe/style.scss
@@ -11,5 +11,9 @@
         color: red;
         cursor: no-drop;
     }
+    &.ghe-cam{
+        cursor: no-drop;
+        color: black;
+    }
     
 }
